@@ -13,6 +13,7 @@
 -revise mixer set_num_channels method.
 -refactor mixer music rewind method.
 -revise mixer channel play promise handling.
+-refactor mixer audio object.
 
 0.26    2022-04-18
 -revise textarea object.
